Object details: Fix image being squashed

--- a/css/backoffice/components/_title.scss
+++ b/css/backoffice/components/_title.scss
@@ -12,7 +12,8 @@ $ibo-title--medallion--background-color: $ibo-color-grey-100 !default;
 $ibo-title--medallion--border: 2px solid $ibo-color-blue-grey-300 !default;
 $ibo-title--medallion--border-radius: $ibo-border-radius-full !default;
 
-$ibo-title--icon--size--must-cover: 100% !default;
+$ibo-title--icon--size--must-contain: contain !default;
+$ibo-title--icon--size--must-cover: cover !default;
 $ibo-title--icon--size--must-zoomout: 66.67% !default;
 
 $ibo-title--status-dot--size: 10px !default;
@@ -49,15 +50,25 @@ $ibo-title--object-tags--separator-dot--border-radius: $ibo-border-radius-full !
   border: $ibo-title--medallion--border;
   border-radius: $ibo-title--medallion--border-radius;
 }
+
 .ibo-title--icon {
-  width: $ibo-title--icon--size--must-cover;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: $ibo-title--icon--size--must-contain;
+}
+
+.ibo-title--icon--must-contain {
+  background-size: $ibo-title--icon--size--must-contain;
+}
+
+.ibo-title--icon--must-cover {
+  background-size: $ibo-title--icon--size--must-cover;
 }
 
 .ibo-title--icon--must-zoomout {
-  width: $ibo-title--icon--size--must-zoomout;
+  background-size: $ibo-title--icon--size--must-zoomout;
 }
 
 .ibo-title--for-object-details {
